// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedChestScreen should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AnimatedChestScreen
    ctaLabel="cta"
    heading="heading"
    isLocked={false}
    onPressCta={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 500,
              "justifyContent": "center",
              "overflow": "hidden",
              "width": "100%",
            }
          }
        >
          <React.Fragment>
            <AnimatedComponent
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../assets/chest-components/chest-background.png",
                }
              }
              style={
                Object {
                  "opacity": 0,
                  "transform": Array [
                    Object {
                      "scale": 0,
                    },
                  ],
                }
              }
            />
            <View
              style={
                Object {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "height": 400,
                  "overflow": "hidden",
                  "position": "absolute",
                  "top": 0,
                }
              }
            >
              <AnimatedComponent
                style={
                  Object {
                    "bottom": 0,
                    "position": "absolute",
                    "transform": Array [
                      Object {
                        "translateY": -35,
                      },
                    ],
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/chest-components/chest-lid.png",
                    }
                  }
                />
              </AnimatedComponent>
              <AnimatedComponent
                style={
                  Object {
                    "alignItems": "center",
                    "transform": Array [
                      Object {
                        "translateY": 500,
                      },
                    ],
                  }
                }
              >
                <ChestCoin />
              </AnimatedComponent>
              <View
                style={
                  Object {
                    "marginTop": "auto",
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/chest-components/chest-base.png",
                    }
                  }
                />
              </View>
            </View>
          </React.Fragment>
        </View>,
        <YuText
          bold={true}
          style={
            Object {
              "fontSize": 50,
              "marginBottom": 40,
              "marginHorizontal": 160,
              "textAlign": "center",
            }
          }
        >
          heading
        </YuText>,
        <Button
          label="cta"
          onPress={[MockFunction]}
          type="PrimaryMedium"
        />,
        undefined,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <React.Fragment>
            <AnimatedComponent
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../assets/chest-components/chest-background.png",
                }
              }
              style={
                Object {
                  "opacity": 0,
                  "transform": Array [
                    Object {
                      "scale": 0,
                    },
                  ],
                }
              }
            />
            <View
              style={
                Object {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "height": 400,
                  "overflow": "hidden",
                  "position": "absolute",
                  "top": 0,
                }
              }
            >
              <AnimatedComponent
                style={
                  Object {
                    "bottom": 0,
                    "position": "absolute",
                    "transform": Array [
                      Object {
                        "translateY": -35,
                      },
                    ],
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/chest-components/chest-lid.png",
                    }
                  }
                />
              </AnimatedComponent>
              <AnimatedComponent
                style={
                  Object {
                    "alignItems": "center",
                    "transform": Array [
                      Object {
                        "translateY": 500,
                      },
                    ],
                  }
                }
              >
                <ChestCoin />
              </AnimatedComponent>
              <View
                style={
                  Object {
                    "marginTop": "auto",
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/chest-components/chest-base.png",
                    }
                  }
                />
              </View>
            </View>
          </React.Fragment>,
          "style": Object {
            "alignItems": "center",
            "height": 500,
            "justifyContent": "center",
            "overflow": "hidden",
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <AnimatedComponent
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/chest-components/chest-background.png",
                  }
                }
                style={
                  Object {
                    "opacity": 0,
                    "transform": Array [
                      Object {
                        "scale": 0,
                      },
                    ],
                  }
                }
              />,
              <View
                style={
                  Object {
                    "borderColor": "transparent",
                    "borderWidth": 1,
                    "height": 400,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                <AnimatedComponent
                  style={
                    Object {
                      "bottom": 0,
                      "position": "absolute",
                      "transform": Array [
                        Object {
                          "translateY": -35,
                        },
                      ],
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/chest-components/chest-lid.png",
                      }
                    }
                  />
                </AnimatedComponent>
                <AnimatedComponent
                  style={
                    Object {
                      "alignItems": "center",
                      "transform": Array [
                        Object {
                          "translateY": 500,
                        },
                      ],
                    }
                  }
                >
                  <ChestCoin />
                </AnimatedComponent>
                <View
                  style={
                    Object {
                      "marginTop": "auto",
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/chest-components/chest-base.png",
                      }
                    }
                  />
                </View>
              </View>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "resizeMode": "contain",
                "source": Object {
                  "testUri": "../../../assets/chest-components/chest-background.png",
                },
                "style": Object {
                  "opacity": 0,
                  "transform": Array [
                    Object {
                      "scale": 0,
                    },
                  ],
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <AnimatedComponent
                    style={
                      Object {
                        "bottom": 0,
                        "position": "absolute",
                        "transform": Array [
                          Object {
                            "translateY": -35,
                          },
                        ],
                      }
                    }
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/chest-components/chest-lid.png",
                        }
                      }
                    />
                  </AnimatedComponent>,
                  <AnimatedComponent
                    style={
                      Object {
                        "alignItems": "center",
                        "transform": Array [
                          Object {
                            "translateY": 500,
                          },
                        ],
                      }
                    }
                  >
                    <ChestCoin />
                  </AnimatedComponent>,
                  <View
                    style={
                      Object {
                        "marginTop": "auto",
                      }
                    }
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/chest-components/chest-base.png",
                        }
                      }
                    />
                  </View>,
                ],
                "style": Object {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "height": 400,
                  "overflow": "hidden",
                  "position": "absolute",
                  "top": 0,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <Image
                      source={
                        Object {
                          "testUri": "../../../assets/chest-components/chest-lid.png",
                        }
                      }
                    />,
                    "style": Object {
                      "bottom": 0,
                      "position": "absolute",
                      "transform": Array [
                        Object {
                          "translateY": -35,
                        },
                      ],
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "source": Object {
                        "testUri": "../../../assets/chest-components/chest-lid.png",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <ChestCoin />,
                    "style": Object {
                      "alignItems": "center",
                      "transform": Array [
                        Object {
                          "translateY": 500,
                        },
                      ],
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <Image
                      source={
                        Object {
                          "testUri": "../../../assets/chest-components/chest-base.png",
                        }
                      }
                    />,
                    "style": Object {
                      "marginTop": "auto",
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "source": Object {
                        "testUri": "../../../assets/chest-components/chest-base.png",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": Symbol(react.fragment),
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "bold": true,
          "children": "heading",
          "style": Object {
            "fontSize": 50,
            "marginBottom": 40,
            "marginHorizontal": 160,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "heading",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "cta",
          "onPress": [MockFunction],
          "type": "PrimaryMedium",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 500,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": "100%",
              }
            }
          >
            <React.Fragment>
              <AnimatedComponent
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/chest-components/chest-background.png",
                  }
                }
                style={
                  Object {
                    "opacity": 0,
                    "transform": Array [
                      Object {
                        "scale": 0,
                      },
                    ],
                  }
                }
              />
              <View
                style={
                  Object {
                    "borderColor": "transparent",
                    "borderWidth": 1,
                    "height": 400,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                <AnimatedComponent
                  style={
                    Object {
                      "bottom": 0,
                      "position": "absolute",
                      "transform": Array [
                        Object {
                          "translateY": -35,
                        },
                      ],
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/chest-components/chest-lid.png",
                      }
                    }
                  />
                </AnimatedComponent>
                <AnimatedComponent
                  style={
                    Object {
                      "alignItems": "center",
                      "transform": Array [
                        Object {
                          "translateY": 500,
                        },
                      ],
                    }
                  }
                >
                  <ChestCoin />
                </AnimatedComponent>
                <View
                  style={
                    Object {
                      "marginTop": "auto",
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/chest-components/chest-base.png",
                      }
                    }
                  />
                </View>
              </View>
            </React.Fragment>
          </View>,
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 50,
                "marginBottom": 40,
                "marginHorizontal": 160,
                "textAlign": "center",
              }
            }
          >
            heading
          </YuText>,
          <Button
            label="cta"
            onPress={[MockFunction]}
            type="PrimaryMedium"
          />,
          undefined,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <React.Fragment>
              <AnimatedComponent
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/chest-components/chest-background.png",
                  }
                }
                style={
                  Object {
                    "opacity": 0,
                    "transform": Array [
                      Object {
                        "scale": 0,
                      },
                    ],
                  }
                }
              />
              <View
                style={
                  Object {
                    "borderColor": "transparent",
                    "borderWidth": 1,
                    "height": 400,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                <AnimatedComponent
                  style={
                    Object {
                      "bottom": 0,
                      "position": "absolute",
                      "transform": Array [
                        Object {
                          "translateY": -35,
                        },
                      ],
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/chest-components/chest-lid.png",
                      }
                    }
                  />
                </AnimatedComponent>
                <AnimatedComponent
                  style={
                    Object {
                      "alignItems": "center",
                      "transform": Array [
                        Object {
                          "translateY": 500,
                        },
                      ],
                    }
                  }
                >
                  <ChestCoin />
                </AnimatedComponent>
                <View
                  style={
                    Object {
                      "marginTop": "auto",
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/chest-components/chest-base.png",
                      }
                    }
                  />
                </View>
              </View>
            </React.Fragment>,
            "style": Object {
              "alignItems": "center",
              "height": 500,
              "justifyContent": "center",
              "overflow": "hidden",
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <AnimatedComponent
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../assets/chest-components/chest-background.png",
                    }
                  }
                  style={
                    Object {
                      "opacity": 0,
                      "transform": Array [
                        Object {
                          "scale": 0,
                        },
                      ],
                    }
                  }
                />,
                <View
                  style={
                    Object {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "height": 400,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                    }
                  }
                >
                  <AnimatedComponent
                    style={
                      Object {
                        "bottom": 0,
                        "position": "absolute",
                        "transform": Array [
                          Object {
                            "translateY": -35,
                          },
                        ],
                      }
                    }
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/chest-components/chest-lid.png",
                        }
                      }
                    />
                  </AnimatedComponent>
                  <AnimatedComponent
                    style={
                      Object {
                        "alignItems": "center",
                        "transform": Array [
                          Object {
                            "translateY": 500,
                          },
                        ],
                      }
                    }
                  >
                    <ChestCoin />
                  </AnimatedComponent>
                  <View
                    style={
                      Object {
                        "marginTop": "auto",
                      }
                    }
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/chest-components/chest-base.png",
                        }
                      }
                    />
                  </View>
                </View>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "resizeMode": "contain",
                  "source": Object {
                    "testUri": "../../../assets/chest-components/chest-background.png",
                  },
                  "style": Object {
                    "opacity": 0,
                    "transform": Array [
                      Object {
                        "scale": 0,
                      },
                    ],
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <AnimatedComponent
                      style={
                        Object {
                          "bottom": 0,
                          "position": "absolute",
                          "transform": Array [
                            Object {
                              "translateY": -35,
                            },
                          ],
                        }
                      }
                    >
                      <Image
                        source={
                          Object {
                            "testUri": "../../../assets/chest-components/chest-lid.png",
                          }
                        }
                      />
                    </AnimatedComponent>,
                    <AnimatedComponent
                      style={
                        Object {
                          "alignItems": "center",
                          "transform": Array [
                            Object {
                              "translateY": 500,
                            },
                          ],
                        }
                      }
                    >
                      <ChestCoin />
                    </AnimatedComponent>,
                    <View
                      style={
                        Object {
                          "marginTop": "auto",
                        }
                      }
                    >
                      <Image
                        source={
                          Object {
                            "testUri": "../../../assets/chest-components/chest-base.png",
                          }
                        }
                      />
                    </View>,
                  ],
                  "style": Object {
                    "borderColor": "transparent",
                    "borderWidth": 1,
                    "height": 400,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Image
                        source={
                          Object {
                            "testUri": "../../../assets/chest-components/chest-lid.png",
                          }
                        }
                      />,
                      "style": Object {
                        "bottom": 0,
                        "position": "absolute",
                        "transform": Array [
                          Object {
                            "translateY": -35,
                          },
                        ],
                      },
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "source": Object {
                          "testUri": "../../../assets/chest-components/chest-lid.png",
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <ChestCoin />,
                      "style": Object {
                        "alignItems": "center",
                        "transform": Array [
                          Object {
                            "translateY": 500,
                          },
                        ],
                      },
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {},
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Image
                        source={
                          Object {
                            "testUri": "../../../assets/chest-components/chest-base.png",
                          }
                        }
                      />,
                      "style": Object {
                        "marginTop": "auto",
                      },
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "source": Object {
                          "testUri": "../../../assets/chest-components/chest-base.png",
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": Symbol(react.fragment),
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "heading",
            "style": Object {
              "fontSize": 50,
              "marginBottom": 40,
              "marginHorizontal": 160,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "heading",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "cta",
            "onPress": [MockFunction],
            "type": "PrimaryMedium",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`AnimatedChestScreen should render a locked chest 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AnimatedChestScreen
    ctaLabel="cta"
    heading="heading"
    isLocked={true}
    onPressCta={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 500,
              "justifyContent": "center",
              "overflow": "hidden",
              "width": "100%",
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/chest-components/chest-locked.png",
              }
            }
          />
        </View>,
        <YuText
          bold={true}
          style={
            Object {
              "fontSize": 50,
              "marginBottom": 40,
              "marginHorizontal": 160,
              "textAlign": "center",
            }
          }
        >
          heading
        </YuText>,
        <Button
          label="cta"
          onPress={[MockFunction]}
          type="PrimaryMedium"
        />,
        undefined,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Image
            source={
              Object {
                "testUri": "../../../assets/chest-components/chest-locked.png",
              }
            }
          />,
          "style": Object {
            "alignItems": "center",
            "height": 500,
            "justifyContent": "center",
            "overflow": "hidden",
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": Object {
              "testUri": "../../../assets/chest-components/chest-locked.png",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "bold": true,
          "children": "heading",
          "style": Object {
            "fontSize": 50,
            "marginBottom": 40,
            "marginHorizontal": 160,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "heading",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "cta",
          "onPress": [MockFunction],
          "type": "PrimaryMedium",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 500,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": "100%",
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/chest-components/chest-locked.png",
                }
              }
            />
          </View>,
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 50,
                "marginBottom": 40,
                "marginHorizontal": 160,
                "textAlign": "center",
              }
            }
          >
            heading
          </YuText>,
          <Button
            label="cta"
            onPress={[MockFunction]}
            type="PrimaryMedium"
          />,
          undefined,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Image
              source={
                Object {
                  "testUri": "../../../assets/chest-components/chest-locked.png",
                }
              }
            />,
            "style": Object {
              "alignItems": "center",
              "height": 500,
              "justifyContent": "center",
              "overflow": "hidden",
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": Object {
                "testUri": "../../../assets/chest-components/chest-locked.png",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "heading",
            "style": Object {
              "fontSize": 50,
              "marginBottom": 40,
              "marginHorizontal": 160,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "heading",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "cta",
            "onPress": [MockFunction],
            "type": "PrimaryMedium",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`AnimatedChestScreen should render with a secondary button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AnimatedChestScreen
    ctaLabel="cta"
    heading="heading"
    isLocked={false}
    onPressCta={[MockFunction]}
    onPressCtaSecondary={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 500,
              "justifyContent": "center",
              "overflow": "hidden",
              "width": "100%",
            }
          }
        >
          <React.Fragment>
            <AnimatedComponent
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../assets/chest-components/chest-background.png",
                }
              }
              style={
                Object {
                  "opacity": 0,
                  "transform": Array [
                    Object {
                      "scale": 0,
                    },
                  ],
                }
              }
            />
            <View
              style={
                Object {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "height": 400,
                  "overflow": "hidden",
                  "position": "absolute",
                  "top": 0,
                }
              }
            >
              <AnimatedComponent
                style={
                  Object {
                    "bottom": 0,
                    "position": "absolute",
                    "transform": Array [
                      Object {
                        "translateY": -35,
                      },
                    ],
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/chest-components/chest-lid.png",
                    }
                  }
                />
              </AnimatedComponent>
              <AnimatedComponent
                style={
                  Object {
                    "alignItems": "center",
                    "transform": Array [
                      Object {
                        "translateY": 500,
                      },
                    ],
                  }
                }
              >
                <ChestCoin />
              </AnimatedComponent>
              <View
                style={
                  Object {
                    "marginTop": "auto",
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/chest-components/chest-base.png",
                    }
                  }
                />
              </View>
            </View>
          </React.Fragment>
        </View>,
        <YuText
          bold={true}
          style={
            Object {
              "fontSize": 50,
              "marginBottom": 40,
              "marginHorizontal": 160,
              "textAlign": "center",
            }
          }
        >
          heading
        </YuText>,
        <Button
          label="cta"
          onPress={[MockFunction]}
          type="PrimaryMedium"
        />,
        <Button
          label="later"
          onPress={[MockFunction]}
          type="Link"
          wrapperStyle={
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "marginTop": 16,
            }
          }
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <React.Fragment>
            <AnimatedComponent
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../assets/chest-components/chest-background.png",
                }
              }
              style={
                Object {
                  "opacity": 0,
                  "transform": Array [
                    Object {
                      "scale": 0,
                    },
                  ],
                }
              }
            />
            <View
              style={
                Object {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "height": 400,
                  "overflow": "hidden",
                  "position": "absolute",
                  "top": 0,
                }
              }
            >
              <AnimatedComponent
                style={
                  Object {
                    "bottom": 0,
                    "position": "absolute",
                    "transform": Array [
                      Object {
                        "translateY": -35,
                      },
                    ],
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/chest-components/chest-lid.png",
                    }
                  }
                />
              </AnimatedComponent>
              <AnimatedComponent
                style={
                  Object {
                    "alignItems": "center",
                    "transform": Array [
                      Object {
                        "translateY": 500,
                      },
                    ],
                  }
                }
              >
                <ChestCoin />
              </AnimatedComponent>
              <View
                style={
                  Object {
                    "marginTop": "auto",
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/chest-components/chest-base.png",
                    }
                  }
                />
              </View>
            </View>
          </React.Fragment>,
          "style": Object {
            "alignItems": "center",
            "height": 500,
            "justifyContent": "center",
            "overflow": "hidden",
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <AnimatedComponent
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/chest-components/chest-background.png",
                  }
                }
                style={
                  Object {
                    "opacity": 0,
                    "transform": Array [
                      Object {
                        "scale": 0,
                      },
                    ],
                  }
                }
              />,
              <View
                style={
                  Object {
                    "borderColor": "transparent",
                    "borderWidth": 1,
                    "height": 400,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                <AnimatedComponent
                  style={
                    Object {
                      "bottom": 0,
                      "position": "absolute",
                      "transform": Array [
                        Object {
                          "translateY": -35,
                        },
                      ],
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/chest-components/chest-lid.png",
                      }
                    }
                  />
                </AnimatedComponent>
                <AnimatedComponent
                  style={
                    Object {
                      "alignItems": "center",
                      "transform": Array [
                        Object {
                          "translateY": 500,
                        },
                      ],
                    }
                  }
                >
                  <ChestCoin />
                </AnimatedComponent>
                <View
                  style={
                    Object {
                      "marginTop": "auto",
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/chest-components/chest-base.png",
                      }
                    }
                  />
                </View>
              </View>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "resizeMode": "contain",
                "source": Object {
                  "testUri": "../../../assets/chest-components/chest-background.png",
                },
                "style": Object {
                  "opacity": 0,
                  "transform": Array [
                    Object {
                      "scale": 0,
                    },
                  ],
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <AnimatedComponent
                    style={
                      Object {
                        "bottom": 0,
                        "position": "absolute",
                        "transform": Array [
                          Object {
                            "translateY": -35,
                          },
                        ],
                      }
                    }
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/chest-components/chest-lid.png",
                        }
                      }
                    />
                  </AnimatedComponent>,
                  <AnimatedComponent
                    style={
                      Object {
                        "alignItems": "center",
                        "transform": Array [
                          Object {
                            "translateY": 500,
                          },
                        ],
                      }
                    }
                  >
                    <ChestCoin />
                  </AnimatedComponent>,
                  <View
                    style={
                      Object {
                        "marginTop": "auto",
                      }
                    }
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/chest-components/chest-base.png",
                        }
                      }
                    />
                  </View>,
                ],
                "style": Object {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "height": 400,
                  "overflow": "hidden",
                  "position": "absolute",
                  "top": 0,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <Image
                      source={
                        Object {
                          "testUri": "../../../assets/chest-components/chest-lid.png",
                        }
                      }
                    />,
                    "style": Object {
                      "bottom": 0,
                      "position": "absolute",
                      "transform": Array [
                        Object {
                          "translateY": -35,
                        },
                      ],
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "source": Object {
                        "testUri": "../../../assets/chest-components/chest-lid.png",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <ChestCoin />,
                    "style": Object {
                      "alignItems": "center",
                      "transform": Array [
                        Object {
                          "translateY": 500,
                        },
                      ],
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <Image
                      source={
                        Object {
                          "testUri": "../../../assets/chest-components/chest-base.png",
                        }
                      }
                    />,
                    "style": Object {
                      "marginTop": "auto",
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "source": Object {
                        "testUri": "../../../assets/chest-components/chest-base.png",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": Symbol(react.fragment),
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "bold": true,
          "children": "heading",
          "style": Object {
            "fontSize": 50,
            "marginBottom": 40,
            "marginHorizontal": 160,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "heading",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "cta",
          "onPress": [MockFunction],
          "type": "PrimaryMedium",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "later",
          "onPress": [MockFunction],
          "type": "Link",
          "wrapperStyle": Object {
            "alignItems": "center",
            "alignSelf": "center",
            "marginTop": 16,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 500,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": "100%",
              }
            }
          >
            <React.Fragment>
              <AnimatedComponent
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/chest-components/chest-background.png",
                  }
                }
                style={
                  Object {
                    "opacity": 0,
                    "transform": Array [
                      Object {
                        "scale": 0,
                      },
                    ],
                  }
                }
              />
              <View
                style={
                  Object {
                    "borderColor": "transparent",
                    "borderWidth": 1,
                    "height": 400,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                <AnimatedComponent
                  style={
                    Object {
                      "bottom": 0,
                      "position": "absolute",
                      "transform": Array [
                        Object {
                          "translateY": -35,
                        },
                      ],
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/chest-components/chest-lid.png",
                      }
                    }
                  />
                </AnimatedComponent>
                <AnimatedComponent
                  style={
                    Object {
                      "alignItems": "center",
                      "transform": Array [
                        Object {
                          "translateY": 500,
                        },
                      ],
                    }
                  }
                >
                  <ChestCoin />
                </AnimatedComponent>
                <View
                  style={
                    Object {
                      "marginTop": "auto",
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/chest-components/chest-base.png",
                      }
                    }
                  />
                </View>
              </View>
            </React.Fragment>
          </View>,
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 50,
                "marginBottom": 40,
                "marginHorizontal": 160,
                "textAlign": "center",
              }
            }
          >
            heading
          </YuText>,
          <Button
            label="cta"
            onPress={[MockFunction]}
            type="PrimaryMedium"
          />,
          <Button
            label="later"
            onPress={[MockFunction]}
            type="Link"
            wrapperStyle={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "marginTop": 16,
              }
            }
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <React.Fragment>
              <AnimatedComponent
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/chest-components/chest-background.png",
                  }
                }
                style={
                  Object {
                    "opacity": 0,
                    "transform": Array [
                      Object {
                        "scale": 0,
                      },
                    ],
                  }
                }
              />
              <View
                style={
                  Object {
                    "borderColor": "transparent",
                    "borderWidth": 1,
                    "height": 400,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                <AnimatedComponent
                  style={
                    Object {
                      "bottom": 0,
                      "position": "absolute",
                      "transform": Array [
                        Object {
                          "translateY": -35,
                        },
                      ],
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/chest-components/chest-lid.png",
                      }
                    }
                  />
                </AnimatedComponent>
                <AnimatedComponent
                  style={
                    Object {
                      "alignItems": "center",
                      "transform": Array [
                        Object {
                          "translateY": 500,
                        },
                      ],
                    }
                  }
                >
                  <ChestCoin />
                </AnimatedComponent>
                <View
                  style={
                    Object {
                      "marginTop": "auto",
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/chest-components/chest-base.png",
                      }
                    }
                  />
                </View>
              </View>
            </React.Fragment>,
            "style": Object {
              "alignItems": "center",
              "height": 500,
              "justifyContent": "center",
              "overflow": "hidden",
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <AnimatedComponent
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../assets/chest-components/chest-background.png",
                    }
                  }
                  style={
                    Object {
                      "opacity": 0,
                      "transform": Array [
                        Object {
                          "scale": 0,
                        },
                      ],
                    }
                  }
                />,
                <View
                  style={
                    Object {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "height": 400,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                    }
                  }
                >
                  <AnimatedComponent
                    style={
                      Object {
                        "bottom": 0,
                        "position": "absolute",
                        "transform": Array [
                          Object {
                            "translateY": -35,
                          },
                        ],
                      }
                    }
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/chest-components/chest-lid.png",
                        }
                      }
                    />
                  </AnimatedComponent>
                  <AnimatedComponent
                    style={
                      Object {
                        "alignItems": "center",
                        "transform": Array [
                          Object {
                            "translateY": 500,
                          },
                        ],
                      }
                    }
                  >
                    <ChestCoin />
                  </AnimatedComponent>
                  <View
                    style={
                      Object {
                        "marginTop": "auto",
                      }
                    }
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/chest-components/chest-base.png",
                        }
                      }
                    />
                  </View>
                </View>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "resizeMode": "contain",
                  "source": Object {
                    "testUri": "../../../assets/chest-components/chest-background.png",
                  },
                  "style": Object {
                    "opacity": 0,
                    "transform": Array [
                      Object {
                        "scale": 0,
                      },
                    ],
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <AnimatedComponent
                      style={
                        Object {
                          "bottom": 0,
                          "position": "absolute",
                          "transform": Array [
                            Object {
                              "translateY": -35,
                            },
                          ],
                        }
                      }
                    >
                      <Image
                        source={
                          Object {
                            "testUri": "../../../assets/chest-components/chest-lid.png",
                          }
                        }
                      />
                    </AnimatedComponent>,
                    <AnimatedComponent
                      style={
                        Object {
                          "alignItems": "center",
                          "transform": Array [
                            Object {
                              "translateY": 500,
                            },
                          ],
                        }
                      }
                    >
                      <ChestCoin />
                    </AnimatedComponent>,
                    <View
                      style={
                        Object {
                          "marginTop": "auto",
                        }
                      }
                    >
                      <Image
                        source={
                          Object {
                            "testUri": "../../../assets/chest-components/chest-base.png",
                          }
                        }
                      />
                    </View>,
                  ],
                  "style": Object {
                    "borderColor": "transparent",
                    "borderWidth": 1,
                    "height": 400,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Image
                        source={
                          Object {
                            "testUri": "../../../assets/chest-components/chest-lid.png",
                          }
                        }
                      />,
                      "style": Object {
                        "bottom": 0,
                        "position": "absolute",
                        "transform": Array [
                          Object {
                            "translateY": -35,
                          },
                        ],
                      },
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "source": Object {
                          "testUri": "../../../assets/chest-components/chest-lid.png",
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <ChestCoin />,
                      "style": Object {
                        "alignItems": "center",
                        "transform": Array [
                          Object {
                            "translateY": 500,
                          },
                        ],
                      },
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {},
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Image
                        source={
                          Object {
                            "testUri": "../../../assets/chest-components/chest-base.png",
                          }
                        }
                      />,
                      "style": Object {
                        "marginTop": "auto",
                      },
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "source": Object {
                          "testUri": "../../../assets/chest-components/chest-base.png",
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": Symbol(react.fragment),
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "heading",
            "style": Object {
              "fontSize": 50,
              "marginBottom": 40,
              "marginHorizontal": 160,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "heading",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "cta",
            "onPress": [MockFunction],
            "type": "PrimaryMedium",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "later",
            "onPress": [MockFunction],
            "type": "Link",
            "wrapperStyle": Object {
              "alignItems": "center",
              "alignSelf": "center",
              "marginTop": 16,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
